--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -18,7 +18,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Selene
-        run: selene lib test benchmark
+        run: selene lib
   format:
     name: Format
     runs-on: ubuntu-latest
@@ -30,4 +30,4 @@ jobs:
         uses: JohnnyMorganz/stylua-action@1.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --check lib test benchmark
+          args: --check lib
