--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3
 
       - name: Install Foreman
         uses: rojo-rbx/setup-foreman@v1.0.1
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3
 
       - name: Run StyLua check
         uses: JohnnyMorganz/stylua-action@1.0.0
@@ -33,14 +33,27 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Foreman
+        uses: Roblox/setup-foreman@v1.0.1
+        with: 
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install Foreman Toolchains
+        run: foreman install
+    
       - name: Install Dependencies
         run: wally install
+
       - name: Get Release from wally.toml
         uses: SebRollen/toml-action@v1.0.0
         id: read_toml
         with: 
           file: 'wally.toml'
           field: 'package.version'
+
       - name: Publish to Wally
         env: 
           WALLY_TOKEN: ${{ secrets.WALLY_AUTH_TOKEN }}
