--- a/lib/wally.toml
+++ b/lib/wally.toml
@@ -1,7 +1,9 @@
 [package]
 name = "justethecoder/sharp"
+description = "A powerful framework for building games"
 version = "1.1.2"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
+Promise = "evaera/promise@^4"
