--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -51,7 +51,7 @@ jobs:
         uses: SebRollen/toml-action@v1.0.0
         id: read_toml
         with: 
-          file: 'wally.toml'
+          file: 'lib/wally.toml'
           field: 'package.version'
 
       - name: Publish to Wally
