--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -45,7 +45,7 @@ jobs:
         env:
           WALLY_AUTH: ${{ secrets.WALLY_AUTH }}
         run: |
-          cd lib
           mkdir =p ~/.wally
-          printf "[tokens]\n\"https://api.wally.run/\" = \"%s\"" "$WALLY_TOKEN" >> ~/.wally/auth.toml
+          echo "$WALLY_AUTH" > ~/.wally/auth.toml
+          cd lib
           wally publish
