--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -45,6 +45,7 @@ jobs:
         env:
           WALLY_TOKEN: ${{ secrets.WALLY_AUTH_TOKEN }}
         run: |
-          cd lib
+          mkdir =p ~/.wally
           printf "[tokens]\n\"https://api.wally.run/\" = \"%s\"" "$WALLY_TOKEN" >> ~/.wally/auth.toml
+          cd lib
           wally publish
